[package]
name = "formula-one-telemetry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
attohttpc = "0.28.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
tokio = "1.37.0"